--- a/micro_host_app/pubspec.yaml
+++ b/micro_host_app/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_micro_app: ^0.12.1
+  micro_routes:
+    path: ../micro_routes
+  micro_app_1:
+    path: ../micro_app_1
 
 dev_dependencies:
   flutter_test:
